@@ -1,2 +1,15 @@
 # JavaFX17
  An empty JavaFX 17 application
+
+In Eclipse you will need to add the JavaFX user library:
+   Build Path -> Add Libraries...
+   User Library
+      Java FX
+
+You will need to add VM arguments
+   Run As -> Run Configurations
+      Arguments tab
+         VM arguments window
+            
+--module-path "C:\Program Files\Java\javafx-sdk-17.0.2\lib" 
+--add-modules javafx.controls,javafx.fxml
